# colorbynumber

./: .env.example  .gitignore  CONTEXT.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  app.py  pyproject.toml
backend/tests/: conftest.py  test_app.py  test_integration.py
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  api.js
frontend/src/components/: BeforeAfterSlider.jsx  Layout.jsx
frontend/src/pages/: Generate.jsx  Home.jsx  Support.jsx
pipeline/: .dockerignore  .env.example  Dockerfile  app.py  conftest.py  main.py  pyproject.toml  requirements.txt
pipeline/outputs/: .gitkeep
pipeline/src/: __init__.py
pipeline/src/pipeline_stages/: __init__.py  cleanup.py  colored_preview.py  label_placement.py  outline.py  outline_smoothing.py  palette_legend.py  preprocessing.py  quantization.py  segmentation.py
pipeline/tests/: test_app.py
pipeline/utils/: io.py
